# MarsFramework

./: .gitignore  AGENTS.md  CMakeLists.txt  CODING_RULES.md  MarsDef.h  MarsFramework.pro  MarsProperty.h  MarsText.cpp  MarsText.h  MarsTheme.cpp  MarsTheme.h  MarsThemeAnimationWidget.cpp  MarsTitleBar.cpp  MarsTitleBar.h  MarsWidget.cpp  MarsWidget.h  MarsWinShadowHelper.cpp  MarsWinShadowHelper.h  MarsWindow.cpp  MarsWindow.h  README.md  main.cpp  setting_window.cpp  setting_window.h  widget.cpp  widget.ui
MarsQuickTools/: .gitignore  CMakeLists.txt  MODULE_FILES.md
MarsQuickTools/qml/components/: AppButton.qml  MarsApplicationWindow.qml  SystemTitleButton.qml  WindowResizeHandles.qml  WindowTitleBar.qml  qmldir
MarsQuickTools/qml/theme/: Theme.qml  qmldir
MarsQuickTools/resources/: fonts.qrc
MarsQuickTools/src/: appcontroller.cpp  appcontroller.h  framelesswindowagent.cpp  framelesswindowagent.h  themerevealoverlay.cpp  themerevealoverlay.h
MarsQuickToolsExample/: CMakeLists.txt
MarsQuickToolsExample/app/: main.cpp
MarsQuickToolsExample/qml/: Main.qml
MarsQuickToolsExample/qml/pages/: HomePage.qml
MarsTools/: MarsApplication.cpp  MarsApplication.h  MarsDef.h  MarsRadioButton.cpp  MarsRadioButton.h  MarsScrollPageArea.cpp  MarsScrollPageArea.h  MarsSingleton.h  MarsText.cpp  MarsText.h  MarsThemeAnimationWidget.h  MarsTitleBar.cpp  MarsTitleBar.h  MarsTools.pri  MarsWidget.cpp  MarsWidget.h  MarsWinShadowHelper.cpp  MarsWinShadowHelper.h
